add iframe video

--- a/documentation/statuts-fiscaux.html
+++ b/documentation/statuts-fiscaux.html
@@ -58,7 +58,7 @@
                     d’adopter les impôts sur le revenu.
                 </p>
 
-				<h3>IS (Impôt sur la société)</h3>
+				<h3>IS (Impôts sur la société)</h3>
 				<p>
                     L’impôt sur les sociétés s’applique sur le bénéfice réalisé par la SARL (ou du moins la personne morale). 
                     L’entrepreneur ou les associés sont quant à eux imposés personnellement sur les rémunérations et 
@@ -68,17 +68,17 @@
                     les sociétés</strong> mais nous pouvons temporairement nous placer sous le régime prévu pour les sociétés de personnes (IR).
                 </p>
                 
-                <h3>IR (Impôt sur le revenu)</h3>
+                <h3>IR (Impôts sur le revenu)</h3>
                 <p>
-                    Ce statut fiscal ci amène une <strong>imposition directe au nom de l’entrepreneur</strong> ou de chacun des associés en cas 
+                    Ce statut fiscal amène une <strong>imposition directe au nom de l’entrepreneur</strong> ou de chacun des associés en cas 
                     d’exercice en société. Ce sont en général les sociétés individuelles qui paient ces impôts, 
-                    tel que les micro-entreprises ou les EURL.
+                    telles que les micro-entreprises ou les EURL.
                 </p>
 
                 <h2>Comment faire son choix</h2>
                 <p>
                     Dans l’exemple de la création de notre SARL <em>Consult’Innov</em> nous avons choisi L’IS. 
-                    Tout simplement car sur les premiers 38 120 euros de bénéfices nous pouvions obtenir un taux réduit 
+                    Tout simplement car sur les premiers 38 120 euros de bénéfices nous pouvons obtenir un taux réduit 
                     d’imposition de 15% mais aussi car les associés sont par conséquent imposables sur les rémunérations et les 
                     dividendes uniquement. A savoir que les cotisations sociales ne sont pas les mêmes suivant le statut à choisir. 
                     L’IR peut être rentable si l’on sait qu’au début nous allons avoir des pertes, des difficultés ou faibles résultats, 
