--- a/documentation/statuts-juridiques.html
+++ b/documentation/statuts-juridiques.html
@@ -51,9 +51,9 @@
                 <h2>Définition</h2>
                 <p>
                     La création de son entreprise peut parfois paraître très complexe et déstabiliser l’entrepreneur. 
-                    En effet, on pense desuite au nombre important de papiers à remplir, de démarches et de déclarations à faire. Mais par où commencer ? <br>
+                    En effet, on pense tout de suite au nombre important de papiers à remplir, de démarches et de déclarations à faire. Mais par où commencer ? <br>
                     La première question à se poser est : quel type d’entreprise dois-je créer, et lequel correspond au mieux à ce que j’entreprends ? <br>
-                    Il existe plusieurs <strong>statuts juridiques</strong> qui peuvent ne pas être très parlant au premier abord. On entend parler de d’<em>EURL</em>, 
+                    Il existe plusieurs <strong>statuts juridiques</strong> qui peuvent ne pas être très parlant au premier abord. On entend parler d’<em>EURL</em>, 
                     de <em>SARL</em>, ou encore de <em>SA</em> ou <em>SAS</em>.
                 </p>
                 <p>
@@ -97,10 +97,10 @@
                     <li>Responsabilité <strong>limitée aux apports</strong></li>
                     <li>Capital social d’au <strong>minimum 37 000€</strong></li>
                     <li>Président du conseil <strong>assimilé-salarié</strong>, les autres membres ne sont pas rémunérés</li>
-                    <li>Impôt sur les <strong>sociétés</strong></li>
+                    <li>Impôts sur les <strong>sociétés</strong></li>
                 </ul>
 
-                <h3>SAS <span class="font-normal">(Société par actions simplifiée)</span></h3>
+                <h3>SAS <span class="font-normal">(Société par actions simplifiées)</span></h3>
 				<ul>
                     <li>Au <strong>minimum un</strong> associé (s’il n’y en a qu’un, on parle de SASU)</li>
                     <li>Un <strong>président</strong>, et un représentant légal (qui peuvent être confondus)</li>
@@ -114,16 +114,16 @@
                 <ul>
                     <li>Au <strong>minimum 2</strong> associés</li>
                     <li><strong>Un ou plusieurs</strong> gérant(s)</li>
-                    <li>Responsabilité <strong>solidaire</strong> entre tous les associés, à hauteurs de l’ensemble des biens</li>
+                    <li>Responsabilité <strong>solidaire</strong> entre tous les associés, à hauteur de l’ensemble des biens</li>
                     <li>Capital social <strong>libre</strong></li>
                     <li>Dirigeants <strong>TNS</strong></li>
-                    <li>Impôts sur le <strong>revenu</strong>, relatif à la part de bénéfice de chaque associé</li>
+                    <li>Impôts sur le <strong>revenu</strong>, relatifs à la part de bénéfice de chaque associés</li>
                 </ul>
 
                 <h3>SCOP <span class="font-normal">(Société coopérative de production)</span></h3>
                 <ul>
                     <li><strong>Tous les salariés</strong> de l’entreprise sont associés, ainsi que d’éventuels investisseurs externes</li>
-                    <li>Un <strong>gérant</strong> est élu par les associés majoritaire</li>
+                    <li>Un <strong>gérant</strong> est élu par les associés majoritaires</li>
                     <li>Responsabilité <strong>limitée aux apports</strong></li>
                     <li>Capital d’au <strong>minimum 30€</strong> pour une SCOP SARL, et <strong>18 500€</strong> pour une SCOP SA</li>
                     <li>Directeur et dirigeants <strong>assimilés-salariés</strong></li>
@@ -135,7 +135,7 @@
                     lui permettant de bénéficier de caractéristiques semblables à une SARL.
                     Une entreprise qui possède déjà une certaine somme à investir et qui voudrait <em>entrer en bourse</em> se dirigerait plutôt vers une SA.
                     En revanche, notre guide s’adapte plus aux jeunes entrepreneurs qui mettent en place leur première entreprise et qui 
-                    voudrait une certaine <strong>souplesse</strong>, tant sur le plan <em>économique</em> que <em>évolutif</em>.
+                    voudrait une certaine <strong>souplesse</strong>, tant sur le plan <em>économique</em> qu'<em>évolutif</em>.
                 </p>
                 <p>
                     C’est pourquoi tout au long de ce guide de création de SARL, vous pourrez trouver différents exemples basés sur une création fictive de SARL, 
