--- a/documentation/statuts-sociaux.html
+++ b/documentation/statuts-sociaux.html
@@ -50,7 +50,7 @@
             
             <h2>Définition</h2>
             <p>
-                Peut être avez-vous déjà été salarié auparavant ? Mais qu'en est-il lorsque l'on créer son entreprise ? <br>
+                Peut être avez-vous déjà été salarié auparavant ? Mais qu'en est-il lorsque l'on créé son entreprise ? <br>
                 Le statut social d’un gérant d’une SARL dépend de s’il est gérant majoritaire ou minoritaire. <br>
                 Dans tous les cas, il ne peut se salarier lui-même. Voici les différents statuts qu’il peut adopter.
             </p>
@@ -58,7 +58,7 @@
             <h2>Dirigeants TNS</h2>
             <p>
                 Si le gérant est majoritaire il a un statut de dirigeant TNS (Travailleur Non Salarié) 
-                rattaché à la Sécurité sociale des Indépendants (anciennement RSI, remplacé en Janvier 2018). <br>
+                rattaché à la Sécurité sociale des Indépendants (anciennement RSI, remplacée en Janvier 2018). <br>
                 Cela lui permet de bénéficier d’une protection sociale peu coûteuse 
                 (environ 50% de moins que s'il est affilié au régime général de la sécurité sociale) qui peut être complétée par des contrats 
                 d’assurances complémentaires. De plus, le montant de cotisations sociales à payer en début d’activité est faible.
@@ -69,7 +69,7 @@
                 effective qu’à partir de 7 jours, lesquels ne sont dus qu’à partir d’un an d’affiliation. 
                 Le TNS n’est pas couvert contre les accidents de travail et les maladies professionnelles, 
                 il est indemnisé comme s’il était en arrêt maladie. Enfin il y a un assujettissement aux cotisations sociales 
-                d’une partie des dividendes (qui dépasse 10% du capital social, des primes d’émission et des apports en compte courant d’associé) 
+                d’une partie des dividendes (qui dépasse 10% du capital social, des primes d’émissions et des apports en compte courant d’associé) 
                 perçus par ce dernier.
             </p>
             
@@ -89,7 +89,7 @@
             <h2>Dirigeant assimilé-salarié</h2>
             <p>
                 Si le gérant est minoritaire, égalitaire ou non associé il a un statut de dirigeant assimilé salarié rattaché 
-                au régime général de la Sécurité sociale. <br>
+                au régime général de la Sécurité Sociale. <br>
                 Il bénéficie d’une meilleure couverture sociale mais n’est toutefois pas couvert en matière 
                 d’assurance chômage qui nécessite une assurance complémentaire. 
                 Il a le droit à la retraite prévue pour les cadres et aux prestations avec un délai d’affiliation nécessaire court. 
