--- a/kit/interlocuteurs.html
+++ b/kit/interlocuteurs.html
@@ -92,7 +92,7 @@
 
                 <h3>Greffier CFE :</h3>
                 <p>
-                    Le greffier CFE va quant à lui vous délivrer une immatriculation, un extrait Kbis. 
+                    Le greffier CFE va quant à lui vous délivrer une immatriculation et un extrait Kbis. 
                     L’entreprise deviendra donc une personne morale et possédera une sorte d’état civil. 
                     Il faut bien évidemment certains récépissés et étapes à suivre avant de le consulter car il faudra avoir rédigé les statuts, 
                     ouvert un compte au nom de l’entreprise et aussi par exemple donné la durée de la personne morale qu’est l’entreprise.
@@ -103,8 +103,8 @@
                     Le comptable peut vous conseiller sur le meilleur statut d’entreprise à adopter en fonction de vos besoins 
                     (S.A, S.A.R.L, S.A.S etc..) Il se chargera des relations entre vous et l’URSSAF ou le RSI et aussi avec le centre des impôts 
                     de votre commune. Le comptable se verra aussi faire vos déclarations mensuelles, trimestrielles et annuelles pour vous. 
-                    En résumé il est là pour se charger de tâches que vous pourriez faire mais qui vous prendrez surement beaucoup de temps et 
-                    surtout de votre temps hors travail. Bien que facultatif, il peut être très fortement conseillé d’avoir un comptable pour mieux 
+                    En résumé il est là pour se charger de tâches que vous pourriez faire mais qui vous prendraient surement beaucoup de temps et 
+                    surtout hors travail. Bien que facultatif, il peut être très fortement conseillé d’avoir un comptable pour mieux 
                     gérer vos finances.
                 </p>
 
@@ -114,7 +114,7 @@
                     Il vous aidera à évaluer les risques suivant vos actions. Son expertise pour les moyennes ou grandes entreprises est 
                     devenue très importante de nos jours et parfois même, il peut être engagé pour faire partie de la direction générale 
                     ou financière tant sa vision sur la conformité à la loi est importante. Dans le cas de la création d’une petite S.A.R.L 
-                    vous n’en aurez sûrement pas besoin.
+                    vous n’en n'aurez sûrement pas besoin.
                 </p>
 		</div>
 	</main>
