--- a/raci.html
+++ b/raci.html
@@ -37,7 +37,7 @@
 			<h1 class="mb-4">RACI</h1>
 			<p>
                 Le RACI est un outil permettant de mettre à plat les tâches à faire, 
-                et les personnes devant intervenir dessus, tout en précisant le rôle que chacun tient pour chaque tâche.
+                et les personnes devant intervenir dessus, tout en précisant le rôle que chacun tient pour chaque tâches.
 			</p>
 
 			<p>
